--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# MySQL properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/new_schema?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate properties
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Hidden Http Method Filter
+spring.mvc.hiddenmethod.filter.enabled=true
+#spring.main.allow-circular-references = true
 
