--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=root
 # Hibernate properties
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Hidden Http Method Filter
 spring.mvc.hiddenmethod.filter.enabled=true
